--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body{
+background-color: plum;
 
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -17,31 +20,41 @@ code {
   width: 100%;
   min-height: 100vh;
   margin: 0 auto ;
-  box-sizing: 0 2px 6px #08a05ca4 ;
+  box-shadow: 0 5px 6px #000000a4 ;
   padding: 0 15px;
   box-sizing: border-box;
 }
+.carousel{
+ margin-top: 40px;
+  text-align: center;
+
+}
+
+/*Para Header*/
 header{
- width: 97%;
- min-height: 100px;
- max-width: 1530px;
- overflow: hidden;
- display: flex;
- justify-content: space-around;
- align-items: center;
- flex-wrap: wrap;
- position: fixed;
- box-sizing: border-box;
- background-color: crimson;
- box-shadow: 0 5px 10px #ff50eee4;
+width:97%;
+min-height: 100px;
+max-width: 1530px;
+overflow: hidden;
+display: flex;
+justify-content: space-around;
+align-items: center;
+flex-wrap: wrap;
+/*position: fixed;*/
+box-sizing: border-box;
+background-color: #f4c4f3;  
+background: -webkit-linear-gradient(to right, #fc67fa, #f4c4f3);  
+background: linear-gradient(to right, #fc67fa, #f4c4f3); 
+box-shadow: 0 5px 10px  #edcad9;
 }
+
+
 a{
-  color: black;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-a:hover{
-  color:#f34337f4;
+  color: #000000;/*no cambia el color de las letras*/
+  text-decoration: none; /*No me toma lo del subrayado*/
+  
+
+  
 }
 li{
   list-style: none;
@@ -49,39 +62,149 @@ li{
 header ul{
   display: flex;
   padding: 0;
-  margin:0;
+  margin: 0;
 }
+
 header ul li{
   padding: 0 1rem;
 }
-
 header ul li a{
-  font-weight: bold;
+  font-weight: bold; 
 }
 
-header .carrito{
+/*Carrito*/
+header.cart{
   position: relative;
   cursor: pointer;
-}header .carrito box-icon{
-  width: 45px;
-  height: 45px;
-}
-header .carrito span{
+}header .cart box-icon{
+  width: 35px;
+  height: 35px;
+}header .cart span{
   position: absolute;
-  top: -1rem;
-  right: -1.5rem;
-  width: 2.5rem;
-  height: 2.5rem;
+  top: 1rem;
+  right: 21rem;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   padding: 0rem;
-  font-size: 1.5rem;
+  background-color: rgb(232, 16, 16);
   font-weight: 700;
-  background-color:crimson;
 }
+
+
+/*Para Inicio*/
+.inicio{
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 2rem;
+}
+.inicio h1{
+  font-size:2rem;
+  color: #ffffff;
+}
+
+
+
+
+
+
+/*Css del producto*/
+.title{
+  font-size: 2rem;
+  padding: 10rem 0 0 0;
+  color:rgb(224, 85, 143);
+  margin-left: 100px;
+  padding-top: -3px;
+}
+.productos{
+ padding: 5rem 0;
+ margin: 0 auto ;
+ display: grid;
+ grid-template-columns: repeat(auto-fit, minmax(22rem,1fr));
+ gap: 3rem 2rem;
+ box-sizing: border-box;
+}
+.producto{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 1px 10px 10px 2px rgb rgb(250, 250, 250);
+  border: 6px solid transparent;
+  border-radius: 5px;
+}
+
+.producto:hover{
+border: 6px solid #f1daef;
+}
+.producto_img img{
+  width: 310px;
+}
+.producto_footer{
+  padding: 1rem ;
+}
+.producto_footer h1{
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: #0f0f0f;
+  font-family: Helvetica, sans-serif;
+}
+.producto_footer p{
+  font-weight: 700;
+  color: (0,0,0, .555);
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.producto_footer .precio{
+  font-size: 2rem;
+  color:#000000;
+}
+.producto .buttom{
+  width: 100%;
+  height: 45px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 1rem 3rem;
+  padding: 0 1rem;
+  margin: 1rem;
+} 
+.buttom .btn{
+  border:none;
+  outline: 0;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.buttom button{
+  background-color:hsl(327, 100%, 72%);
+  max-width: 250px;
+  width: 100%;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  color:hsl(0, 0%, 100%);
+  font-weight: 600;
+}
+
+.buttom div{
+  background-color: #67fc7b;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  margin-left: -2rem;
+  border-radius: 5px;
+  
+}
+.buttom div a{
+  color: rgb(10, 0, 0);
+  font-weight: 700;
+}
+.buttom div a:hover{
+  color: rgb(252, 10, 10);
+}
+
 
 @media only screen and (max-width: 600px){
   header ul{
